spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,6 @@ html {
   font-size: 1.1em !important:
 }
 
-.carousel-inner img {
-  width: 100%;
-  height: 90%;
-}
 
 .carousel-caption {
   position: absolute;
@@ -50,6 +46,11 @@ html {
   color: black;
 }
 
+.landing {
+  width: 100%;
+  height: 860px;
+}
+
 .logo {
   max-width: 200px;
   max-height: 100px;
@@ -60,7 +61,7 @@ html {
   background-image: url('../img/for-sale.jpg');
 
   /* Set a specific height */
-  height: 700px;;
+  height: 600px;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -73,7 +74,7 @@ html {
   background-image: url('../img/Three_sisters.jpg');
 
   /* Set a specific height */
-  height: 500px;
+  height: 600px;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
